Added to Tab component

--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -1,7 +1,7 @@
 .Hero {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh + 50px);
 }
 
 .HeroBg {
@@ -12,9 +12,16 @@
 }
 .backDrop {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh + 50px);
   position: absolute;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.4);
+}
+.BgTabs {
+  display: flex;
+  position: absolute;
+  left: 20px;
+  top: 100;
+  transform: translateY(-50%);
 }
