--- a/src/Components/Hero/Tab/Tab.module.css
+++ b/src/Components/Hero/Tab/Tab.module.css
@@ -11,9 +11,13 @@
   border-radius: 50%;
   margin-right: 20px;
   box-shadow: 0 2px 5px 1px rgb(64 60 67 / 16%);
+  cursor: pointer;
 }
 .bgImage {
   object-fit: cover;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
   z-index: 100;
   border-radius: 50%;
   width: 100%;
@@ -26,7 +30,8 @@
   top: 0;
   left: 0;
   border-radius: 50%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 300;
 }
 .wrapper {
   position: relative;
@@ -34,4 +39,9 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
+}
+
+.Tab:hover {
+  transform: scale(1.2);
+  transition: all 0.6s ease;
 }
