--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -17,7 +17,7 @@
   top: 0;
   left: 0;
   z-index: 200;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 .BgTabs {
   display: flex;
@@ -44,4 +44,27 @@
   overflow: hidden;
 
   width: 100%;
+}
+.CTA_btn {
+  border: none;
+  width: 200px;
+  padding: 20px;
+  color: white;
+  font-weight: 700;
+  font-size: 20px;
+  border-radius: 10px;
+  background: linear-gradient(to right, black, #6c7586);
+}
+.callToAction {
+  position: absolute;
+  top: 50%;
+  left: 100px;
+  width: 800px;
+  transform: translateY(-50%);
+}
+.CTA_Header {
+  color: white;
+  font-size: 50px;
+  line-height: 1.3;
+  margin-bottom: 30px;
 }
