--- a/src/Components/SlideShow/SlideShow.module.css
+++ b/src/Components/SlideShow/SlideShow.module.css
@@ -3,6 +3,8 @@
   margin: 0 auto;
   max-width: 100%;
   overflow: hidden;
+  animation-name: example;
+  animation-duration: 2s;
 }
 
 .slideshowSlider {
@@ -36,6 +38,14 @@
   background-repeat: no-repeat;
   width: 100%;
   height: calc(100vh + 100px);
+}
+@keyframes example {
+  0% {
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 .slide2Small {
   position: relative;
