Added services cards

--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -17,7 +17,7 @@
   top: 0;
   left: 0;
   z-index: 200;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: black;
 }
 .BgTabs {
   display: flex;
