--- a/src/Pages/LandingPage/LandingPage.module.css
+++ b/src/Pages/LandingPage/LandingPage.module.css
@@ -1,4 +1,30 @@
 .section_2 {
+  padding: 200px 50px;
   width: 100%;
   height: 100vh;
+  box-sizing: border-box;
+}
+.header_wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.section_details {
+  width: 400px;
+  color: #54595f;
+}
+.primary_header {
+  color: #181b29;
+}
+.grid_wrapper {
+  width: 100%;
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
+.innerWraper {
+  display: block;
+  max-width: 1140px;
+  margin: 0 auto;
+  padding-bottom: 50px;
 }
