--- a/src/Pages/LandingPage/LandingPage.module.css
+++ b/src/Pages/LandingPage/LandingPage.module.css
@@ -1,10 +1,11 @@
-.section_2 {
+.section_2,
+.section_3 {
   padding: 200px 50px;
   width: 100%;
   height: 100vh;
   box-sizing: border-box;
 }
-.header_wrapper {
+.section_2 .header_wrapper {
   display: flex;
   justify-content: space-between;
 }
@@ -27,4 +28,91 @@
   max-width: 1140px;
   margin: 0 auto;
   padding-bottom: 50px;
+}
+.section_3 .header_wrapper {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-gap: 25px;
+}
+.stats_wrapper {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 25px;
+}
+.stat_item {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #181b29;
+  color: white;
+}
+.section_details h2 {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 30px;
+  line-height: 1.1;
+}
+.section_details p {
+  margin: 0;
+}
+.stat {
+  font-size: 50px;
+}
+.stat_description {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+}
+.section_content {
+  width: 100%;
+  height: 500px;
+  display: grid;
+  grid-template-columns: 1fr 1.8fr;
+  grid-gap: 25px;
+  margin-top: 35px;
+}
+
+.slide_show {
+  background-color: red;
+}
+.service_stats {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 25px;
+}
+
+.service_stat_wrapper {
+  padding: 20px;
+  border: 1px lightgray solid;
+}
+.stat_meter_wrapper {
+  width: 100%;
+  height: 40px;
+  background-color: lightgray;
+}
+.service_stat_wrapper p {
+  font-weight: 600;
+  margin-top: 0;
+}
+.stat_meter {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding: 5px 5px 5px 0;
+  height: 100%;
+  background-color: #181b29;
+  color: white;
+  box-sizing: border-box;
+}
+.stat_meter p {
+  font-size: 15px;
+  margin: 0;
 }
