--- a/src/Pages/AboutUsPage/AboutUsPage.module.css
+++ b/src/Pages/AboutUsPage/AboutUsPage.module.css
@@ -3,13 +3,17 @@
     position: relative;
     width: 100%;
     height: calc(100vh + 50px);
-    opacity: 0.8;
+
+    
    
   }
 
   .section_2 {
     width: 100%;
     height: 100vh;
+    background-color: rgba(250, 235, 215, 0.2);
+
+  
   }
   .text {
     backface-visibility: hidden;
@@ -19,6 +23,24 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-weight: bold;
     
   }
+.message {
+  color:rgb(2, 2, 27);
+  font-weight: bold;
+  opacity: .7;
+  font-size: 3rem;
+  
+}
+.alignment{
+  width: 80%;
+  text-align: center;
+  margin: auto;
+}
+.paragraph{
+  color: grey;
+  opacity: .7;
+  font-size: 1.2rem;
+}
   
