--- a/src/Pages/AboutUsPage/AboutUsPage.module.css
+++ b/src/Pages/AboutUsPage/AboutUsPage.module.css
@@ -11,7 +11,7 @@
   .section_2 {
     width: 100%;
     height: 100vh;
-    background-color: rgba(250, 235, 215, 0.2);
+    /* background-color: rgba(0, 0, 20, 0.05); */
 
   
   }
@@ -42,5 +42,51 @@
   color: grey;
   opacity: .7;
   font-size: 1.2rem;
+  margin-top: 100px;
 }
+
+.paper{
+  padding: 2px;
+  text-align: 'center';
   
+}
+.gridItem{
+  text-align: center;
+}
+
+.gridContainer{
+  width: 80%;
+  margin: auto;
+  margin-top: 30px;
+}
+.gridItemImg{
+  width: 180px;
+  height: 200px;
+  opacity: .8;
+  margin: auto;
+  
+}
+.count{
+  font-size: 5rem;
+  text-align: center;
+  background:linear-gradient(90deg,rgb(0, 0, 20,1),rgba(0, 0, 20, 1),white);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  
+}
+.supportingTest{
+  font-size: 1rem;
+  text-align: center;
+  color:rgb(2, 2, 27);
+  opacity: .8;
+  margin: 0px;
+}
+.emptySpace{
+  width: 4rem;
+}
+.bMargin{
+     margin-bottom: 30px;
+}.backgroundForAll{
+  background-color: rgba(0, 0, 20, 0.05);
+  padding: 1rem;
+}
