--- a/src/Pages/AboutUsPage/AboutUsPage.module.css
+++ b/src/Pages/AboutUsPage/AboutUsPage.module.css
@@ -3,15 +3,12 @@
     position: relative;
     width: 100%;
     height: calc(100vh + 50px);
-
-    
    
   }
 
   .section_2 {
     width: 100%;
     height: 100vh;
-    /* background-color: rgba(0, 0, 20, 0.05); */
 
   
   }
@@ -42,14 +39,9 @@
   color: grey;
   opacity: .7;
   font-size: 1.2rem;
-  margin-top: 100px;
+  margin-top: 60px;
 }
 
-.paper{
-  padding: 2px;
-  text-align: 'center';
-  
-}
 .gridItem{
   text-align: center;
 }
@@ -57,13 +49,14 @@
 .gridContainer{
   width: 80%;
   margin: auto;
-  margin-top: 30px;
+  margin-top: 0px;
 }
 .gridItemImg{
   width: 180px;
   height: 200px;
   opacity: .8;
   margin: auto;
+  margin-top: 0px;
   
 }
 .count{
@@ -74,19 +67,60 @@
   -webkit-text-fill-color: transparent;
   
 }
-.supportingTest{
+.supportingText{
   font-size: 1rem;
   text-align: center;
   color:rgb(2, 2, 27);
   opacity: .8;
   margin: 0px;
 }
-.emptySpace{
-  width: 4rem;
+
+.backgroundForAll{
+  background-color: rgba(0, 0, 20, 0.025);
 }
-.bMargin{
-     margin-bottom: 30px;
-}.backgroundForAll{
-  background-color: rgba(0, 0, 20, 0.05);
-  padding: 1rem;
+.text_s4{
+  width: 80%;
+  margin-top: 200px;
+  display: inline-flex;
+  justify-content: center;
+  
+ 
 }
+.floatingImages{
+  width: 23rem;
+  height: 13rem;
+  border-radius: 5px;
+
+}
+
+.text_s4_p2{
+  width: 50%;
+  text-align: center;
+}
+@keyframes animationImages {
+  0%   {  top:0px;}
+  50%  { top:100px;}
+  100% { top:0px;}
+}
+.parent {
+  margin-left: 100px;
+  margin-top: 220px;
+  position: relative;
+  left: 20%;
+  
+}
+.parent:hover{
+
+  animation-name: animationImages;
+  animation-duration: 10s;
+  
+
+}
+.child{
+  position: relative;
+  bottom: 50%;
+  right: 60%;
+  
+}
+
+
