--- a/src/Pages/AboutUsPage/AboutUsPage.module.css
+++ b/src/Pages/AboutUsPage/AboutUsPage.module.css
@@ -9,7 +9,6 @@
   .section_2 {
     width: 100%;
     height: 100vh;
-
   
   }
   .text {
@@ -99,7 +98,7 @@
 }
 @keyframes animationImages {
   0%   {  top:0px;}
-  50%  { top:100px;}
+  50%  { top:50px;}
   100% { top:0px;}
 }
 .parent {
@@ -107,20 +106,31 @@
   margin-top: 220px;
   position: relative;
   left: 20%;
+  transition: transform 1.50s ease;
   
 }
 .parent:hover{
 
   animation-name: animationImages;
-  animation-duration: 10s;
-  
+  animation-duration: 8s;
 
 }
 .child{
   position: relative;
   bottom: 50%;
   right: 60%;
-  
+  transition: transform 2.50s ease;
+  width: 100%;
+}
+.child:hover {
+  transform: scale(1.2);
+}
+.parent1{
+  transition: transform 2.50s ease;
+}
+.parent1:hover{
+  transform: scale(1.2);
+
 }
 
 
