--- a/src/Components/StatMeter/StatMeter.module.css
+++ b/src/Components/StatMeter/StatMeter.module.css
@@ -20,6 +20,7 @@
   background-color: #181b29;
   color: white;
   box-sizing: border-box;
+  transition: all 2s;
 }
 .stat_meter p {
   font-size: 15px;
