--- a/src/Pages/AboutUsPage/AboutUsPage.module.css
+++ b/src/Pages/AboutUsPage/AboutUsPage.module.css
@@ -1,17 +1,37 @@
 
 .AboutUsPage{
-    position: relative;
     width: 100%;
-    height: calc(100vh + 50px);
+    margin: 0px;
+    padding: 0px;
    
   }
-
-  .section_2 {
-    width: 100%;
-    height: 100vh;
-  
+  @keyframes section1Animation {
+    0%   { width:130%;}
+    100% { width:100%;}
   }
-  .text {
+  .section1Parent{
+    display: flex;
+    justify-content: center;
+    
+  }
+
+  .section{
+    width: 80%;
+    margin: auto;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 0px;
+  }
+  .section1{
+    width: 100%;
+  }
+  .section1_{
+    animation-name: section1Animation;
+    animation-duration: 2s;
+  }
+
+
+  .aboutUsText {
     backface-visibility: hidden;
     font-size: 2rem;
     color:white;
@@ -27,6 +47,7 @@
   font-weight: bold;
   opacity: .7;
   font-size: 3rem;
+  text-align: center;
   
 }
 .alignment{
@@ -44,11 +65,23 @@
 .gridItem{
   text-align: center;
 }
+.topContainer{
+  margin: 0px;
+  width: 100%;
+  display: inline-grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  margin-bottom: 50px;
+  gap: 8rem;
 
+}
 .gridContainer{
-  width: 80%;
-  margin: auto;
-  margin-top: 0px;
+ width: 100%;
+ margin: 0px;
+ display: inline-grid;
+ grid-template-columns: auto auto auto auto;
+ gap: 2rem;
+ 
 }
 .gridItemImg{
   width: 180px;
@@ -59,11 +92,13 @@
   
 }
 .count{
-  font-size: 5rem;
+  font-size: 4rem;
   text-align: center;
   background:linear-gradient(90deg,rgb(0, 0, 20,1),rgba(0, 0, 20, 1),white);
   background-clip: text;
   -webkit-text-fill-color: transparent;
+  margin: 0px;
+  padding: 0px;
   
 }
 .supportingText{
@@ -72,65 +107,59 @@
   color:rgb(2, 2, 27);
   opacity: .8;
   margin: 0px;
+  padding: 0px;
 }
 
 .backgroundForAll{
   background-color: rgba(0, 0, 20, 0.025);
 }
-.text_s4{
-  width: 80%;
-  margin-top: 200px;
-  display: inline-flex;
-  justify-content: center;
-  
- 
-}
 .floatingImages{
-  width: 23rem;
-  height: 13rem;
+  width: 20rem;
+  height: 12rem;
   border-radius: 5px;
 
 }
 
 .text_s4_p2{
-  width: 50%;
+  width: 65%;
   text-align: center;
+  padding: 0px;
+  margin: 0px;
+}
+.section4container{
+  margin-top: 100px;
+  display: inline-flex;
+  justify-content: center;
+  gap: 2rem;
 }
 @keyframes animationImages {
   0%   {  top:0px;}
-  50%  { top:50px;}
+  50%  { top:30px;}
   100% { top:0px;}
 }
-.parent {
-  margin-left: 100px;
-  margin-top: 220px;
-  position: relative;
-  left: 20%;
-  transition: transform 1.50s ease;
-  
-}
-.parent:hover{
 
+.containerOfAnimatedImages{
+  position: relative;
   animation-name: animationImages;
-  animation-duration: 8s;
-
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
 }
-.child{
+#bottomImage{
   position: relative;
-  bottom: 50%;
-  right: 60%;
-  transition: transform 2.50s ease;
-  width: 100%;
-}
-.child:hover {
-  transform: scale(1.2);
-}
-.parent1{
+  bottom: 20%;
   transition: transform 2.50s ease;
 }
-.parent1:hover{
+#topImage {
+  transition: transform 2.50s ease;
+  position: relative;
+  top: 15%;
+  left: 40%;
+}
+#bottomImage:hover{
   transform: scale(1.2);
 
 }
+#topImage:hover{
+  transform: scale(1.2);
 
-
+}
