--- a/src/Pages/WhatWeDo/WhatWeDo.module.css
+++ b/src/Pages/WhatWeDo/WhatWeDo.module.css
@@ -1,9 +1,9 @@
-.section2 {
+/* .section2 {
    
     width: 100%;
-}
+} */
 
-h1{
+.whatwedo{
     color: white;
     backface-visibility: hidden;
     font-size: 2rem;
