--- a/src/Pages/ContactUs/ContactUs.module.css
+++ b/src/Pages/ContactUs/ContactUs.module.css
@@ -176,6 +176,10 @@
     background-color: rgba(255, 255, 255, 0.5);
     color: grey;
     font-size: 1rem;
+    text-align: start;
+
+
+    
 }
 .buttonSubmit{
     margin-top: 1rem;
