--- a/src/Pages/ContactUs/ContactUs.module.css
+++ b/src/Pages/ContactUs/ContactUs.module.css
@@ -152,6 +152,7 @@
     background-color: rgba(255, 255, 255, 0.5);
     color: grey;
     font-size: 1rem;
+    
 }
 .containerWithinForm{
     display: flex;
@@ -169,7 +170,7 @@
     width: 100%;
    
 }
-.paragraphInForm> input{
+.paragraphInForm> textarea{
     height: 7rem;
     border-width: 0;
     border-radius: 5px;
@@ -177,7 +178,8 @@
     color: grey;
     font-size: 1rem;
     text-align: start;
-
+    word-wrap: break-word;
+    word-break: break-all;
 
     
 }
@@ -199,7 +201,7 @@
     outline: none;
 }
 
-.paragraphInForm> input:focus{
+.paragraphInForm> textarea:focus{
     border-width: 0;
     outline: none;
 }
