--- a/src/Pages/Projects/Projects.module.css
+++ b/src/Pages/Projects/Projects.module.css
@@ -28,17 +28,43 @@
     margin-block: 1rem;
 }
 .projectList{
-    display: inline-flex;
-    gap: 1rem;
-    list-style-type: none;
+   display: grid;
+   border: 4px solid steelblue;
+   grid-auto-flow: column;
     /* wrap just in the mean time... ill remove later */
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 }
-.projectList> li{
-    width: fit-content;
-    height: fit-content;
-}
+
 .listItem{
-    width: 18rem;
     border-radius: 3px;
+    border: 3px solid blue;
+    width: 16rem;
+}
+.dotStyle{
+    border-style: solid;
+    border-width: 2px;
+    border-color: steelblue;
+    border-radius: 6px;
+    width: 10px;
+    height: 10px;
+    margin-left:.5rem ;
+    
+  
+}
+.dotStyle:hover{
+    background-color: rgba(70, 131, 180, 0.7);
+
+}
+.imageSliderContainer{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: .5rem;
+    border: 3px solid black;
+    justify-content: center;
+    
+}
+.dotContainer{
+    display: flex;
+    margin-block: 5rem;
+    margin-top: 1rem;
 }
