--- a/src/Pages/LandingPage/LandingPage.module.css
+++ b/src/Pages/LandingPage/LandingPage.module.css
@@ -1,9 +1,3 @@
-.section_2 {
-  padding: 200px 50px 70px 50px;
-  width: 100%;
-  box-sizing: border-box;
-}
-
 .section_3 {
   padding: 70px 50px 70px 50px;
   width: 100%;
@@ -21,13 +15,7 @@
 .primary_header {
   color: #181b29;
 }
-.grid_wrapper {
-  width: 100%;
-  margin-top: 30px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
-}
+
 .innerWraper {
   display: block;
   max-width: 1140px;
@@ -157,6 +145,7 @@
   -moz-box-shadow: 0 0 3px #ccc;
   -webkit-box-shadow: 0 0 3px #ccc;
   box-shadow: 0 0 3px #ccc;
+  transition: all 0.2s;
 }
 
 .contact_section {
