--- a/src/Pages/WhatWeDo/WhatWeDo.module.css
+++ b/src/Pages/WhatWeDo/WhatWeDo.module.css
@@ -21,6 +21,59 @@
 
 }
 
+.img1b{
+  width: 100%;
+  height: 50%;
+  border-radius: 4px;
+
+}
+
+.img2b{
+  width:100%;
+  height: 50%;
+  border-radius: 4px;
+
+}
+.wrapper{
+  display: flex;
+ gap: 2rem;
+ margin-left: 10%;
+ margin-right: 10%;
+}
+.smallerdiv {
+
+  background-color:white;
+  border-radius: 7px;
+  float: left;
+  padding: 20px;
+  width: 600px;
+  height: 300px;
+  margin-top: 40px;
+  
+}
+.smallerdiv:hover{
+  transform:scale(1.1);
+  background: rgba(7, 7, 34, 0.025);
+box-shadow: 2px 2px 2px #000;
+}
+
+.biggerdiv {
+
+  background-color:white;
+  border-radius: 7px;
+  flex-direction: column-reverse;
+  padding: 20px;
+  width: 600px;;
+  margin-left:50px;
+  height: 400px;
+  
+}
+.biggerdiv:hover{
+  transform:scale(1.1);
+  background: rgba(7, 7, 34, 0.025);
+box-shadow: 2px 2px 2px #000;
+}
+
 .img3{
   border-radius: 4px;
   width: 20em;
@@ -29,8 +82,9 @@
  
 }
 .mySection {
+  background-color: white;
  
-  background-color: rgba(0, 0, 20, 0.025);
+  /* background-color: rgba(0, 0, 20, 0.025); */
 }
 .wwdSection {
   margin-top: 4em;
@@ -45,7 +99,18 @@
   /* margin-left: 50%;
   margin-right: 100%; */
 }
+.bottom1{
+  background-color:  navy;
+  height: 10rem;
+  color: #000;
 
+}
+.bottom2{
+  /* background-color:  rgba(2, 2, 36, 0.025); */
+  background-color: white;
+  height: 10rem;
+
+}
 
 .design {
 
@@ -138,7 +203,7 @@ box-shadow: 2px 2px 2px #000;
   background-color:rgb(23, 23, 81);
  } 
 .section2wwd{
-  margin-top: 150px;
+  margin-top: 100px;
 }
 @keyframes section1Animation {
     0%   { width:130%;}
@@ -146,5 +211,5 @@ box-shadow: 2px 2px 2px #000;
   }
   .whatwedo{
     animation-name: section1Animation;
-    animation-duration: 2s;
+    animation-duration: 1s;
   }
