--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,7 +6,7 @@
 
 .innerDiv{
    height: 100%;
-   background: linear-gradient(90deg,rgba(2, 2, 27, .8),rgba(2, 2, 27, .8),rgba(2, 2, 27, .5));
+   background: linear-gradient(90deg,rgba(2, 2, 27, .95),rgba(2, 2, 27, .8));
    color: white;
    text-align: center;
    font-weight: bold;
