--- a/src/Pages/AboutUsPage/AboutUsPage.module.css
+++ b/src/Pages/AboutUsPage/AboutUsPage.module.css
@@ -171,7 +171,7 @@
   height: 40vh;
   border-radius: 5px;
   background-color: white;
-  box-shadow: 1px 1px 30px  1px rgba(128, 128, 128, 0.5);
+  box-shadow: 0px 1px 5px rgba(128, 128, 128, 0.5);
   margin-block: 8rem;
   display: flex;
   justify-content: center;
@@ -202,4 +202,7 @@
 .gridView{
   margin-inline: auto;
   height: fit-content;
+}
+.AboutUsSection5:hover{
+  box-shadow: 1px 6px 10px  rgba(128, 128, 128, 0.5);
 }
