--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -15,8 +15,6 @@
 .gridList{
     display: grid;
    grid-template-columns: auto auto auto auto;
-   border: 2px solid rgb(255, 0, 0);
-  
    margin-block: auto;
 }
 .flexDisplay{
@@ -24,8 +22,30 @@
     flex-direction: column;
     justify-content: center;
     height: 100%;
+
+}
+.logo{
+    width: fit-content;
 }
 .logoMessage{
-    margin-inline: 1rem;
-    padding:.5rem ;
+    padding-block:.5rem ;
+    width: fit-content;
+    margin-top: 1rem;
+}
+.social-media{
+    display: flex;
+    gap: 1rem;
+    justify-content:center;
+  
+    width: fit-content;
+    margin-top: 1rem;
+}
+.social-media-icons{
+    width: 2rem;
+    height: 2rem;
+    
+}
+.first-row{
+    width: fit-content;
+    margin-inline: auto;
 }
