--- a/src/Pages/AboutUsPage/AboutUsPage.module.css
+++ b/src/Pages/AboutUsPage/AboutUsPage.module.css
@@ -170,13 +170,14 @@
 .AboutUsSection5{
   height: 40vh;
   border-radius: 5px;
-  background-color: white;
+  background-color: rgba(128, 128, 128, 0.1);
   box-shadow: 0px 1px 5px rgba(128, 128, 128, 0.5);
-  margin-block: 8rem;
   display: flex;
   justify-content: center;
   flex-direction: column;
- 
+  margin-bottom: 4rem;
+
+
   
 }
 .establishMessage{
@@ -204,5 +205,11 @@
   height: fit-content;
 }
 .AboutUsSection5:hover{
-  box-shadow: 1px 6px 10px  rgba(128, 128, 128, 0.5);
+  box-shadow: 3px 3px 10px  2px rgba(128, 128, 128, 1);
+}
+.svg1{
+ border: 3px  solid white;
+ background-image: url("../../Assets/Images/wave.svg");
+ background-repeat: no-repeat;
+ margin-top: 4rem;
 }
