--- a/src/Pages/AboutUsPage/AboutUsPage.module.css
+++ b/src/Pages/AboutUsPage/AboutUsPage.module.css
@@ -12,10 +12,7 @@
   .section1Parent{
     display: flex;
     justify-content: center;
-
-    
   }
-
   .section{
     width: 80%;
     margin: auto;
@@ -30,8 +27,6 @@
     animation-name: section1Animation;
     animation-duration: 2s;
   }
-
-
   .aboutUsText {
     backface-visibility: hidden;
     font-size: 2rem;
@@ -41,7 +36,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-weight: bold;
-    
   }
 .message {
   color:rgb(2, 2, 27);
@@ -49,7 +43,6 @@
   opacity: .7;
   font-size: 3rem;
   text-align: center;
-  
 }
 .alignment{
   width: 80%;
@@ -170,12 +163,13 @@
 .AboutUsSection5{
   height: 40vh;
   border-radius: 5px;
-  background-color: rgba(128, 128, 128, 0.1);
-  box-shadow: 0px 1px 5px rgba(128, 128, 128, 0.5);
+  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 1px 1px 10px 1px rgba(128, 128, 128, 0.5);
   display: flex;
   justify-content: center;
   flex-direction: column;
   margin-bottom: 0rem;
+  backdrop-filter: blur(15px);
 
 
   
@@ -204,9 +198,9 @@
   margin-inline: auto;
   height: fit-content;
 }
-.AboutUsSection5:hover{
+/* .AboutUsSection5:hover{
   box-shadow: 3px 3px 10px  2px rgba(128, 128, 128, 1);
-}
+} */
 .svg1{
  background-image: url("../../Assets/Images/wave.svg");
  background-repeat: no-repeat;
