--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -71,13 +71,41 @@
 .location{
     display: flex;
     justify-content: center;
-    padding-top: 2rem;
+    gap: .2rem;
+    font-size: .85rem;
 }
-.location> div{
-    border: 2px solid red;
+@keyframes icons-animation {
+    0% {bottom: 0px;}
+    100% {bottom: 5px;}
 }
 .icons-footer{
-  width: 2rem;
-  height: 2rem;
+  width: 1.25rem;
+  height: 1.25em;
   color: white;
+}
+
+
+.subject-line{
+    font-weight: 100;
+    font-size: 1.5rem;
+    margin-bottom:1rem;
+}
+.contact-us{
+    display: flex;
+    justify-content: center;
+    gap: .5rem;
+    font-size: .85rem;
+    margin-bottom: .5rem;
+}
+.icons{
+    padding: .1rem;
+}
+.icons:hover{
+    position: relative;
+    animation-name:  icons-animation;
+    animation-duration: .3s;
+    bottom: 5px;
+    cursor: pointer;
+    
+    
 }
