--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -13,7 +13,7 @@
 }
 .gridList{
     display: grid;
-   grid-template-columns: auto auto auto auto;
+   grid-template-columns: auto auto auto;
    margin-block: auto;
 }
 .flexDisplay{
