--- a/src/Pages/WhatWeDo2/WhatWeDo2.module.css
+++ b/src/Pages/WhatWeDo2/WhatWeDo2.module.css
@@ -1,10 +1,199 @@
- /* .WWDsection1, .WWDsection2 , .WWDsection3 {
+.input:focus{
+  outline: none;
+}
+
+.paragraphInForm> textarea:focus{
+  outline: none;
+}
+.paragraphInForm{
+  display:grid;
   width: 100%;
-  margin-top: 30px;
+  contain: content;
+ 
+}
+.paragraphInForm > label {
+  margin-inline: 5px;
+  
+}
+.paragraphInForm> textarea{
+  height: 7rem;
+  border-radius: 5px;
+  background-color: rgba(2, 2, 27, 0.025);
+  color: grey;
+  font-size: 1rem;
+  text-align: start;
+  word-wrap: break-word;
+  word-break: break-all;
+  margin-inline: 5px;
+  outline: none;
+  resize: none;
+  border: none;
+  overflow: auto;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+
+
+  
+}
+.formContent{
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
-} */
+  width: 48%;
+  margin-left: .3rem;
+}
+.containerWithinForm{
+  display: flex;
+  gap:.5rem;
+  flex-wrap: wrap;
+}
+
+
+.input{
+  height: 3rem;
+  border-width: 0;
+  border-radius: 5px;
+  background-color: rgba(2, 2, 27, 0.025);
+  color: grey;
+  font-size: 1rem;
+  margin-top: 6px;
+  width: 12rem;
+  color: black;
+}
+.formSubtitle{
+  text-align:start;
+  color: grey;
+  opacity: .7;
+  font-size: 1.10rem;
+  margin-top: .7rem;
+}
+.paragraph{
+  text-align: center;
+  justify-content: center;
+}
+.formTitle{
+  color:rgb(2, 2, 27);
+  font-weight: bold;
+  opacity: .8;
+  font-size: 2rem;
+  
+}
+.deals{
+  padding: .6rem;
+  padding-left:.2rem;
+  font-size: .8rem;
+  font-weight: bold;
+  width: fit-content;
+  background-color: rgba(2, 2, 27, 0.1);
+  border-radius: 19px;
+ 
+}
+.deals> span{
+  margin-block: auto;
+}
+.exclusive{
+  
+  background-color: rgb(105, 212, 177);
+  border-radius: 17px;
+  padding: 4px;
+  
+}
+.innerGrid{
+  width: 90%;
+  text-align: start;
+  display:grid;
+  gap: 1rem;
+  justify-content: start;
+}
+
+.subjectLine{
+  padding-top: 2rem;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+.storyLine{
+  font-size: 1.25rem;
+}
+.moreInfoButton{
+  background-color: white;
+  color: rgb(35, 34, 34);
+  padding: .3rem;
+  border: 2px solid black;
+  border-radius: 4px  4px  4px  4px;
+}
+.moreInfoButton:hover{
+  background-color: black;
+  color: white;
+}
+.triangle {
+  width:0; 
+  border-bottom:120px solid red; 
+  border-left:60px solid white; 
+  border-right:60px solid white;
+}
+.animationForm{
+  color:white;
+  font-weight: bold;
+  padding: 1rem;
+  text-align: left;
+  margin-right: 6px;
+}
+.link{
+  color: #fff;
+}
+.section{
+  text-align: center;
+  margin-inline: auto;
+  width: 80%;
+  display: grid;
+  grid-template-columns: 54.5% 44.5%;
+  color: white;
+  padding-block: 7rem;
+  justify-content: center;
+}
+
+.message{
+  padding-top: 5rem;
+}
+.form{
+  background-color: white;
+  height: fit-content;
+  width: 100%;
+  box-shadow: 1px 1px 5px black;
+  border-radius: 5px;
+  padding: .5rem;
+}
+
+.buttonSubmit{
+  margin-top: 1rem;
+  font-size: 1rem;
+  color:white;
+  background:linear-gradient(90deg,rgba(2, 2, 27, 0.9),rgba(2, 2, 27, .9),rgba(2, 2, 27, .7)) ;
+  padding: 1rem;
+  font-weight: bold;
+  border-width: 0px;
+  border-radius: 5px;
+}
+.buttonSubmit{
+  margin-top: 1rem;
+  font-size: 1rem;
+  color:white;
+  background:linear-gradient(90deg,rgba(2, 2, 27, 0.9),rgba(2, 2, 27, .9),rgba(2, 2, 27, .7)) ;
+  padding: 1rem;
+  font-weight: bold;
+  border-width: 0px;
+  border-radius: 5px;
+}
+.buttonSubmit:hover{
+  opacity: .8;
+}
+.buttonSubmit:hover{
+  opacity: .8;
+}
+.WWDForSection3{
+    background: linear-gradient(135deg,rgb(2, 2, 27),white);
+    height: fit-content;
+    width: 100%;
+}
 .section3Container{
   display: flex;
   justify-content: center;
@@ -58,9 +247,28 @@ justify-content: space-between;
   border-radius: 5px;
   background-color:rgb(23, 23, 81);
  } 
-
+.last2Cards{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+}
  .cards_gridWrapper {
   width: 100%;
+  height:50%;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+}
+.cards_gridWrapper2 {
+  width: 400%;
+  height:50%;
+  /* display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(3, 1fr); */
+}
+.cards_gridWrapper3 {
+  width: 120%;
+  height:50%;
   display: grid;
   grid-gap: 20px;
   grid-template-columns: repeat(3, 1fr);
