--- a/src/Pages/WhatWeDo2/components/Card.module.css
+++ b/src/Pages/WhatWeDo2/components/Card.module.css
@@ -6,6 +6,22 @@
   overflow: hidden;
   box-shadow: 0 2px 5px 1px rgb(64 60 67 / 16%);
 }
+.Cards {
+  height: 500px;
+  width: 450px;
+  background-color: white;
+  border-radius: 7px;
+  overflow: hidden;
+  box-shadow: 0 2px 5px 1px rgb(64 60 67 / 16%);
+}
+.Cardz {
+  height: 500px;
+  width: 950px;
+  background-color: white;
+  border-radius: 7px;
+  overflow: hidden;
+  box-shadow: 0 2px 5px 1px rgb(64 60 67 / 16%);
+}
 .card_img {
   width: 100%;
   height: 100%;
