about us updates

--- a/src/Components/Navigation/Navigation.module.css
+++ b/src/Components/Navigation/Navigation.module.css
@@ -35,6 +35,10 @@
   font-size: 17px;
   border-radius: 10px;
   background: linear-gradient(to right, #181b29, #6c7586);
+
+}
+.CTA_btn:hover{
+  cursor: pointer;
 }
 .navLink {
   position: relative;
