--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,111 +1,117 @@
-.Footer{
-    height: 70vh;
-    background-image: url('../../Assets/Images/Kitchen.jpeg');
-    background-size: 100%;
+.Footer {
+  height: 70vh;
+  background-image: url("https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80");
+
+  background-size: cover;
+  background-position: center;
 }
 
-.innerDiv{
-   height: 100%;
-   background: linear-gradient(90deg,rgba(2, 2, 27, .95),rgba(2, 2, 27, .8));
-   color: white;
-   text-align: center;
-   
+.innerDiv {
+  background: linear-gradient(90deg, rgba(2, 2, 27, 0.95), rgba(2, 2, 27, 0.8));
+  height: 100%;
+  color: white;
+  text-align: center;
 }
-.gridList{
-    display: grid;
-   grid-template-columns: auto auto auto;
-   margin-block: auto;
+.gridList {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  margin-block: auto;
 }
-.flexDisplay{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
+.flexDisplay {
+  display: flex;
+  max-width: 1140px;
+  margin: 0 auto;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+.logo {
+  width: fit-content;
+}
+.logoMessage {
+  padding-block: 0.5rem;
+  width: fit-content;
+  margin-top: 1rem;
+}
+.social-media {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
 
+  width: fit-content;
+  margin-top: 1rem;
 }
-.logo{
-    width: fit-content;
+.social-media-icons {
+  width: 2rem;
+  height: 2rem;
 }
-.logoMessage{
-    padding-block:.5rem ;
-    width: fit-content;
-    margin-top: 1rem;
-}
-.social-media{
-    display: flex;
-    gap: 1rem;
-    justify-content:center;
-  
-    width: fit-content;
-    margin-top: 1rem;
-}
-.social-media-icons{
-    width: 2rem;
-    height: 2rem;
-    
-}
-.first-row{
-    width: fit-content;
-    margin-inline: auto;
+.first-row {
+  width: fit-content;
+  margin-inline: auto;
 }
 @keyframes social-media-icons-animation {
-    0% {bottom: 0px;}
-    100%{bottom: 5px;}
+  0% {
+    bottom: 0px;
+  }
+  100% {
+    bottom: 5px;
+  }
 }
-.social-media-icons:hover{
-    cursor: pointer;
-    position: relative;
-    animation-name: social-media-icons-animation;
-    animation-duration: 0.3s;
-    bottom: 6px;
+.social-media-icons:hover {
+  cursor: pointer;
+  position: relative;
+  animation-name: social-media-icons-animation;
+  animation-duration: 0.3s;
+  bottom: 6px;
 }
-.divider{
-    border: 1px solid grey;
-    width: 99%;
-    margin-inline: auto;
+.divider {
+  border: 1px solid grey;
+  width: 99%;
+  margin-inline: auto;
 }
-.rights{
-    font-size: 1rem;
-    margin-block: 1.5rem;
+.rights {
+  font-size: 1rem;
+  margin-block: 1.5rem;
 }
-.location{
-    display: flex;
-    justify-content: center;
-    gap: .2rem;
-    font-size: .85rem;
+.location {
+  display: flex;
+  justify-content: center;
+  gap: 0.2rem;
+  font-size: 0.85rem;
 }
 @keyframes icons-animation {
-    0% {bottom: 0px;}
-    100% {bottom: 5px;}
+  0% {
+    bottom: 0px;
+  }
+  100% {
+    bottom: 5px;
+  }
 }
-.icons-footer{
+.icons-footer {
   width: 1.25rem;
   height: 1.25em;
   color: white;
 }
 
-
-.subject-line{
-    font-weight: 100;
-    font-size: 1.5rem;
-    margin-bottom:1rem;
+.subject-line {
+  font-weight: 100;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
-.contact-us{
-    display: flex;
-    justify-content: center;
-    gap: .5rem;
-    font-size: .85rem;
-    margin-bottom: .5rem;
+.contact-us {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+  font-size: 0.85rem;
+  margin-bottom: 0.5rem;
 }
-.icons{
-    padding: .1rem;
+.icons {
+  padding: 0.1rem;
 }
-.icons:hover{
-    position: relative;
-    animation-name:  icons-animation;
-    animation-duration: .3s;
-    bottom: 5px;
-    cursor: pointer;
-    
-    
+.icons:hover {
+  position: relative;
+  animation-name: icons-animation;
+  animation-duration: 0.3s;
+  bottom: 5px;
+  cursor: pointer;
 }
